Actualizzo mysql conector

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,38 @@
-flask==2.2.5
-Werkzeug==2.3.7
-jinja2==3.1.2
-flask-login==0.6.2
-flask_migrate==4.0.4
-WTForms==3.0.1
-flask_wtf==1.2.1
-flask-sqlalchemy==3.0.5
-sqlalchemy==2.0.21
-email_validator==2.0.0
-flask-restx==1.1.0
-
-python-dotenv==0.19.2
-
-gunicorn==20.1.0
+alembic==1.12.1
+aniso8601==9.0.1
+attrs==23.1.0
+click==8.1.7
+dnspython==2.4.2
+email-validator==2.0.0
+Flask==2.2.5
+Flask-Login==0.6.2
+Flask-Migrate==4.0.4
 Flask-Minify==0.37
-
-
-# flask_mysqldb
-# psycopg2-binary
+flask-restx==1.1.0
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.2.1
+greenlet==3.0.1
+gunicorn==20.1.0
+htmlmin==0.1.12
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jsmin==3.0.1
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.1
+lesscpy==0.15.1
+Mako==1.3.0
+MarkupSafe==2.1.3
+mysql-connector-python==8.2.0
+ply==3.11
+protobuf==4.21.12
+python-dotenv==0.19.2
+pytz==2023.3.post1
+rcssmin==1.1.2
+referencing==0.31.0
+rpds-py==0.13.1
+SQLAlchemy==2.0.21
+typing_extensions==4.8.0
+Werkzeug==2.3.7
+WTForms==3.0.1
+xxhash==3.4.1
